--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <script src="../code.js"></script>
-    <link href="../Programa de aplicación/css/style4.css" rel="stylesheet" type="text/css">
+    <script src="./code.js"></script>
+    <link href="./css/style4.css" rel="stylesheet" type="text/css">
 </head>
 
 <center>
@@ -19,13 +19,13 @@
         <div class="base">
             <h3 class="select-title">Selecciona la operación:</h3>
             <div class="block1">
-                <a href="../Programa de aplicación/html/InterLineal.html">Interpolación Lineal</a>
+                <a href="./html/InterLineal.html">Interpolación Lineal</a>
             </div>
             <div class="block2">
-                <a href="../Programa de aplicación/html/InterCuadra.html">Interpolación Cuadratica</a>
+                <a href="./html/InterCuadra.html">Interpolación Cuadratica</a>
             </div>
             <div class="block3">
-                <a href="../Programa de aplicación/html/LagraPG.html">Interpolación de Lagrange</a>
+                <a href="./html/LagraPG.html">Interpolación de Lagrange</a>
             </div>
         </div>
         <div class="footer">
