--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <script src="./code.js"></script>
-    <link href="./css/style4.css" rel="stylesheet" type="text/css">
+    <script src="code.js"></script>
+    <link href="css/style4.css" rel="stylesheet" type="text/css">
 </head>
 
 <center>
